finish singleton native-multithreaded pattern

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ nbdist/
 /patterns/creational-pattern/prototype/target/
 /patterns/creational-pattern/prototype_two/target/
 /patterns/creational-pattern/singleton_native_single_threaded/target/
+/patterns/creational-pattern/singleton_native_multithreaded/target/
