finish singleton thread safe pattern

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ nbdist/
 /patterns/creational-pattern/prototype_two/target/
 /patterns/creational-pattern/singleton_native_single_threaded/target/
 /patterns/creational-pattern/singleton_native_multithreaded/target/
+/patterns/creational-pattern/singleton_thread_safe/target/
