finish adapter pattern

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ nbdist/
 /patterns/creational-pattern/singleton_native_single_threaded/target/
 /patterns/creational-pattern/singleton_native_multithreaded/target/
 /patterns/creational-pattern/singleton_thread_safe/target/
+/patterns/structural-pattern/adapter/target/
